# csdigit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  GEMINI.md  IFLOW.md  README.md  README.rst  mypy.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  codecov.yml  multi-platforms.yml  python-app.yml  python-package-conda.yml  python-package.yml
.trunk/: trunk.yaml
benches/: test_bench.py
cpp_ai/: CMakeLists.txt  LICENSE  README.md  test_compile.cpp  xmake.lua
cpp_ai/examples/: basic_usage.cpp  cli_usage.cpp
cpp_ai/include/csdigit/: csdigit.hpp
cpp_ai/src/cli/: main.cpp
cpp_ai/src/csdigit/: csd.cpp  csd_multiplier.cpp  lcsre.cpp
cpp_ai/tests/: test_csdigit.cpp
docs/: conf.py  index.md  index.rst
experiments/: random_gen.py
requirements/: doc.txt  test.txt
rust_ai/: Cargo.toml  README.md
rust_ai/examples/: basic_usage.rs  cli_usage.rs
rust_ai/src/: lib.rs
src/csdigit/: __init__.py  cli.py  csd  csd.py  csd_multiplier.py  lcsre.py  skeleton.py
src/pycsd/: __init__.py  csd_orig.py  run_tests.py
src/pycsd/csd/: csd.py
src/pycsd/dev/: csd_numbers.py
src/pycsd/test/: decimal_tests.py  test_csd_decimals.py  test_csd_integers.py  test_to_and_fro_10bits.py
tests/: conftest.py  test_cli.py  test_csd.py  test_csd_multiplier.py  test_lcsre.py  test_skeleton.py
